--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,17 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-spring.application.name=Bootstrap Spring Boot
+spring.application.name=db_systems_project_1
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Amman
+spring.datasource.url=jdbc:mysql://rdsinstance1.colgqjysnwji.us-west-2.rds.amazonaws.com:3306/DBDS1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=rdsinstance1
+spring.datasource.password=rdspassword
 
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource2.driver-class-name=com.amazon.redshift.jdbc.Driver
+spring.datasource2.url=jdbc:redshift://redshiftcluster.czn8eaqqhlaf.us-west-2.redshift.amazonaws.com:5439/dbs1
+spring.datasource2.username=user1
+spring.datasource2.password=Password123
 
 spring.jpa.show-sql=true
